--- a/app/templates/auth/change_pwd.html
+++ b/app/templates/auth/change_pwd.html
@@ -22,17 +22,23 @@
                         <div class="card fat">
                             <div class="card-body">
                                 <h4 class="card-title">修改密码</h4>
-                                <form method="POST">
+                                <form method="POST" action="{{ url_for('web.change_pwd') }}">
                                     <div class="form-group">
                                         <label for="old-password">原密码</label>
-                                        <input id="old-password" type="password" class="form-control" name="old_password"
+                                        <input id="old-password" type="password" class="form-control"
+                                               name="old_password"
                                                required autofocus data-eye>
                                         <label for="new-password">新密码</label>
-                                        <input id="new-password" type="password" class="form-control" name="new_password"
+                                        <input id="new-password1" type="password" class="form-control"
+                                               name="new_password1"
+                                               required autofocus data-eye>
+                                        <label for="new-password">再次输入新密码</label>
+                                        <input id="new-password2" type="password" class="form-control"
+                                               name="new_password2"
                                                required autofocus data-eye>
                                         <div class="form-text text-muted">
                                             确认你能你住你的密码，同时不容易被别人猜到你的密码！或者你可以<a
-                                                href="{{ url_for("web.index") }}">放弃修改！</a>
+                                                href="{{ url_for("web.user_info") }}">放弃修改！</a>
                                         </div>
                                     </div>
                                     <div class="form-group no-margin">
